--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@auth/core": "0.34.2",
     "@auth/prisma-adapter": "^2.7.2",
     "@prisma/client": "^5.21.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
